@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-14T08:26:35Z",
+  "timestamp" : "2022-09-14T16:29:09Z",
   "count_outdated" : 2399,
   "uniques_outdated" : 578,
-  "count" : 2446,
+  "count" : 2447,
   "uniques" : 611,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-09-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
