@@ -1,5 +1,5 @@
 {
-  "count": 47,
+  "count": 48,
   "uniques": 19,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-09-14T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
