@@ -1,3 +1,11 @@
+2022-09-14T16:29:09Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3054458740
+* notice: last 14d: unq all: 19 48
+* notice: prev accum: outdated-unq outdated-all / unq all: 578 2399 / 611 2446
+* notice: next accum: outdated-unq outdated-all / unq all: 578 2399 / 611 2447
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-14]
+
 2022-09-14T08:26:35Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3051267705
 * notice: last 14d: unq all: 19 47
